--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "license": "ISC",
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.2",
     "cors": "^2.8.5",
     "date-fns": "^3.0.6",
     "dotenv": "^16.3.1",
@@ -27,6 +29,7 @@
     "jsonwebtoken": "^9.0.2",
     "lint-staged": "^15.1.0",
     "mongoose": "^8.0.1",
+    "multer": "^1.4.5-lts.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
